<resources>
    <string name="app_name">速客</string>
    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_iat_dwa">结果动态修正</string>

    <string name="tab_bottom_client">客户</string>
    <string name="tab_bottom_workstation">动态</string>
    <string name="tab_bottom_app">统计</string>
    <string name="tab_bottom_mine">我的</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前操作缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">取消</string>

    <string name="camera_picture">拍照</string>
    <string name="photo_picture">相册</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="complete">完成</string>


    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">松开刷新</string>
    <string name="listview_loading">加载中……</string>
    <string name="nomore_loading">没有更多内容了</string>
    <string name="refreshing">加载中……</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">last update：</string>

    <!-- Default screen margins, per the Android Design guidelines. -->
    <dimen name="textandiconmargin">10dp</dimen>

    <dimen name="ally_text">10sp</dimen>

    <string name="label_indeterminate">Indeterminate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="label_level">Level</string>
    <string name="label_amplitude">Amplitude</string>
    <string name="label_speed">Speed</string>
    <string name="label_length">Length</string>

</resources>
