<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg">

    <FrameLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="51dp" />

    <LinearLayout
        android:id="@+id/wave_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/time_second_tv"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:text="0:00"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />


        <!--<com.rongfeng.speedclient.wave.WaveView-->
            <!--android:id="@+id/wave_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividerLine" />

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/tab_ws_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tab_ws_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tabbar_workbench" />

                <TextView
                    android:id="@+id/tab_ws_tv"
                    style="@style/option_menu_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/tab_bottom_workstation" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_client_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tab_client_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tabbar_client" />

                <TextView
                    android:id="@+id/tab_client_tv"
                    style="@style/option_menu_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="客户" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


            </LinearLayout>


            <RelativeLayout
                android:id="@+id/tab_app_new_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/app_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/tab_app_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tabbar_application" />

                    <TextView
                        android:id="@+id/tab_app_tv"
                        style="@style/option_menu_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/tab_bottom_app" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/tab_mine_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tab_mine_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tabbar_me" />

                <TextView
                    android:id="@+id/tab_mine_tv"
                    style="@style/option_menu_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/tab_bottom_mine" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/tab_plus_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/tabbar_voice" />


</RelativeLayout>
